# erisson

./: 404.html  README.md  index.html  pyproject.toml  search.html
docs/: mkdocs.yml
docs/docs/: git.md  index.md
git/: index.html
notebooks/: notebook_exemplo.ipynb  projeto_ds.ipynb  up_readme_py.ipynb
search/: search_index.json
