[project]
name = "versionamento-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Erisson",email = "erisson.sony26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "versionamento_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
